Registration layouts improvements

--- a/webapp/public/javascripts/angular/filter.html
+++ b/webapp/public/javascripts/angular/filter.html
@@ -5,7 +5,7 @@
     </terrama2-box>
 
     <terrama2-box title="i18n.__('Area')" css="cssBoxSolid">
-      <div class="col-md-12">
+      <div class="col-md-12 terrama2-nopadding-box">
         <p></p>
         <div class='col-md-12'>
           <div class="form-group">
