--- a/examples/situacao_atual/index.html
+++ b/examples/situacao_atual/index.html
@@ -17,11 +17,11 @@
       <div id="header" class="row">
         <div class="col-12" id="top-logo">
           <img src="imagens/logo3.png">
+          <hr id="logo">
         </div>
       </div>
-
       <div id="page" class="row justify-content-center">
-        <div class="col-10">
+        <div class="col-10" style="margin-top:100px">
           <br>
           <h1>Monitoramento da situação atual</h1>
           <p>
