--- a/webapp/public/javascripts/angular/advanced.html
+++ b/webapp/public/javascripts/angular/advanced.html
@@ -114,7 +114,7 @@
     </div>
     <!-- /.box-header -->
     <div class="box-body">
-      <terrama2-storager-form ng-if="!advanced.store.disabled" providers-list="providersList" storager="storager" series="dataSeries" filter="filter" prepare-format-to-form="prepareFormatToForm" field-has-error="fieldHasError" save-storager-data="saveStoragerData" forms="forms" on-storager-format-change= "onStoragerFormatChange" model="model" options="storeOptions" is-checking="isChecking" schedule="schedule"></terrama2-storager-form>
+      <terrama2-storager-form ng-if="!advanced.store.disabled" providers-list="providersList" storager="storager" series="dataSeries" filter="filter" prepare-format-to-form="prepareFormatToForm" field-has-error="fieldHasError" validate-srid="validateSrid" save-storager-data="saveStoragerData" forms="forms" on-storager-format-change= "onStoragerFormatChange" model="model" options="storeOptions" is-checking="isChecking" schedule="schedule"></terrama2-storager-form>
     </div>
   </div>
 </div>
