--- a/helper/services.html
+++ b/helper/services.html
@@ -207,7 +207,7 @@
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <p class="rvps9"><span class="rvts16">A Figura 2.4 mostra a área de trabalho do menu </span><span class="rvts17">Serviços</span><span class="rvts16">. Note que um tipo de cada serviço vem automaticamente configurado após a instalação. Nesta área é possível iniciar ou parar individualmente cada serviço, ou ainda iniciar e parar todos. Um serviço ainda pode ser removido. Veja a seguir mais detalhes de cada serviço e as opções de manipulação.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
-<p class="rvps111"><img alt="" style="padding : 1px;" src="lib/Fig2_4.PNG"></p>
+<p class="rvps112"><img alt="" style="padding : 1px;" src="lib/Fig2_4.PNG"></p>
 <p class="rvps30"><span class="rvts18">Figura 2.4 – </span><span class="rvts19">Módulo de Administração: serviços disponíveis.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <h3 class="rvps17"><span class="rvts0"><span class="rvts27">SERVIÇO DE COLETA </span></span><img alt="" style="padding : 1px;" src="lib/Serv_co_24x24.png"></h3>
@@ -232,10 +232,10 @@
 <li class="rvps11"><span class="rvts16">Log : local em banco de dados a ser armazenado o status do serviço.</span></li>
 <li class="rvps11"><span class="rvts16">Parâmetros do servidor de mapas : local, porta e usuário do Geoserver devem ser informados. Se não foi alterado nenhum parâmetro na instalação do Geoserver estes devem ser:</span></li>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps2"><span class="rvts93">Endereço: http://localhost/geoserver</span></li>
-<li class="rvps2"><span class="rvts93">Porta:8080</span></li>
-<li class="rvps2"><span class="rvts93">Usuário: admin</span></li>
-<li class="rvps2"><span class="rvts93">Senha: geoserver</span></li>
+<li class="rvps2"><span class="rvts94">Endereço: http://localhost/geoserver</span></li>
+<li class="rvps2"><span class="rvts94">Porta:8080</span></li>
+<li class="rvps2"><span class="rvts94">Usuário: admin</span></li>
+<li class="rvps2"><span class="rvts94">Senha: geoserver</span></li>
 </ul></ul>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <h3 class="rvps17"><span class="rvts0"><span class="rvts27">SERVIÇO DE ALERTA </span></span><img alt="" style="padding : 1px;" src="lib/Serv_al_24x24.png"></h3>
@@ -246,14 +246,14 @@
 <li class="rvps11"><span class="rvts16">Log : local em banco de dados a ser armazenado o status do serviço;</span></li>
 <li class="rvps11"><span class="rvts16">Parâmetros do E-mail : configuração do servidor SMTP deve ser informado. Exemplo do servidor de email do GMAIL tem os seguintes parâmetros:</span></li>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps2"><span class="rvts93">Mervidor: </span><a class="rvts94" href="http://smtp.gmail.com">smtp.gmail.com</a></li>
-<li class="rvps2"><span class="rvts93">Porta:&nbsp;587</span></li>
-<li class="rvps2"><span class="rvts93">Usuário: &lt;seu email&gt;</span></li>
-<li class="rvps2"><span class="rvts93">Senha: &lt;sua senha&gt;</span></li>
+<li class="rvps2"><span class="rvts94">Mervidor: </span><a class="rvts95" href="http://smtp.gmail.com">smtp.gmail.com</a></li>
+<li class="rvps2"><span class="rvts94">Porta:&nbsp;587</span></li>
+<li class="rvps2"><span class="rvts94">Usuário: &lt;seu email&gt;</span></li>
+<li class="rvps2"><span class="rvts94">Senha: &lt;sua senha&gt;</span></li>
 </ul></ul>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <h3 class="rvps17"><span class="rvts0"><span class="rvts27">SERVIÇO DE INTERPOLAÇÃO </span></span><img alt="" style="padding : 1px;" src="lib/Serv_in_24x24.png"></h3>
-<p class="rvps9"><span class="rvts16">O serviço de interpolação é utilizado para criar dados dinâmicos matriciais a partir da interpolação de dados dinâmicos de PCD ou ocorrências. As seguintes propriedades deverão ser preenchidas:</span></p>
+<p class="rvps9"><span class="rvts16">O serviço de interpolação é utilizado para criar novos dados dinâmicos matriciais a partir da interpolação de dados dinâmicos de PCD ou ocorrências </span><span class="rvts56">(em desenvolvimento)</span><span class="rvts16">. As seguintes propriedades deverão ser preenchidas:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: disc;">
 <li class="rvps11"><span class="rvts16">Informação : identificação do serviço;</span></li>
 <li class="rvps11"><span class="rvts16">Máquina : se local informar caminho e porta, se remoto informar o endereço Ssh, caminho, porta e usuário com permissão de executar o serviço;</span></li>
@@ -266,11 +266,11 @@
 <li class="rvps31"><span class="rvts0"><span class="rvts28">ADICIONAR UM SERVIÇO LOCAL OU REMOTO:</span></span></li>
 </ul></ul></ul></ul>
 <p class="rvps9"><span class="rvts16">Para adicionar um novo serviço é necessário que um usuário administrador esteja conectado. No menu “</span><span class="rvts17">Administração</span><span class="rvts16">” escolha “</span><span class="rvts17">Serviços</span><span class="rvts16">” para a lista de serviços disponíveis ser apresentada na área de trabalho. Clique no botão “ </span><span class="rvts36">+</span><span class="rvts17"> </span><span class="rvts16">” para adicionar novo serviço. Utilize o botão </span><span class="rvts17">“Salvar”</span><span class="rvts16"> para salvar o serviço. Não é permitido nome de serviço em duplicidade. Botão </span><span class="rvts17">“Cancelar”</span><span class="rvts16"> volta à tela anterior sem salvar o serviço. Detalhes da adição de um novo serviço &nbsp;</span><a class="rvts26" href="add_services.html">veja aqui</a><span class="rvts16">.</span></p>
-<p class="rvps49"><span class="rvts16">.</span></p>
+<p class="rvps50"><span class="rvts16">.</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;">
 <li class="rvps31"><span class="rvts0"><span class="rvts28">FILTRANDO ITENS NA LISTA DE SERVIÇOS:</span></span></li>
 </ul></ul></ul></ul>
-<p class="rvps9"><span class="rvts16">Para filtrar itens na lista de serviços clique em “</span><span class="rvts17">Serviços</span><span class="rvts16">” no menu de opções. Na área de trabalho no campo texto “Digite para pesquisar” digite o texto desejado. Note que todas as colunas disponíveis são utilizadas no filtro. Utilize o botão “</span><img width="12" height="13" alt="lupa.png" src="lib/NewItem12.png"><span class="rvts16">Avançado” para apresentar os botões referentes aos tipos de serviços e escolher os que deverão fazer parte da lista. Por padrão todos os tipos estarão selecionados. O filtro digitado e o(os) botões de escolha do tipo de serviços são combinados para apresentar os itens da lista.</span></p>
+<p class="rvps9"><span class="rvts16">Para filtrar itens na lista de serviços clique em “</span><span class="rvts17">Serviços</span><span class="rvts16">” no menu de opções. Na área de trabalho no campo texto “Digite para pesquisar” digite o texto desejado. Note que todas as colunas disponíveis são utilizadas no filtro. Utilize o botão “</span><img width="12" height="13" alt="lupa.png" src="lib/NewItem.png"><span class="rvts16">Avançado” para apresentar os botões referentes aos tipos de serviços e escolher os que deverão fazer parte da lista. Por padrão todos os tipos estarão selecionados. O filtro digitado e o(os) botões de escolha do tipo de serviços são combinados para apresentar os itens da lista.</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;">
 <li class="rvps31"><span class="rvts0"><span class="rvts28">REMOVENDO UM SERVIÇO:</span></span></li>
 </ul></ul></ul></ul>
@@ -280,11 +280,11 @@
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;">
 <li class="rvps31"><span class="rvts0"><span class="rvts28">INICIALIZANDO SERVIÇO:</span></span></li>
 </ul></ul></ul></ul>
-<p class="rvps9"><span class="rvts16">Para iniciar serviços somente um usuário com privilégio de administrador poderá fazer. No menu “</span><span class="rvts17">Administração</span><span class="rvts16">” clique “</span><span class="rvts17">Serviços</span><span class="rvts16">” para apresentar a lista de serviços disponíveis na área de trabalho. Na frente do nome do serviço clique em “</span><span class="rvts17">Iniciar</span><span class="rvts16">”. O Status, representado por uma bola </span><span class="rvts96">vermelha</span><span class="rvts16">, passa para uma bola </span><span class="rvts95">verde</span><span class="rvts16">. Para iniciar todos os serviços ou aqueles que ainda não foram iniciados clique em “</span><span class="rvts17">Iniciar todos</span><span class="rvts16">”.</span></p>
+<p class="rvps9"><span class="rvts16">Para iniciar serviços somente um usuário com privilégio de administrador poderá fazer. No menu “</span><span class="rvts17">Administração</span><span class="rvts16">” clique “</span><span class="rvts17">Serviços</span><span class="rvts16">” para apresentar a lista de serviços disponíveis na área de trabalho. Na frente do nome do serviço clique em “</span><span class="rvts17">Iniciar</span><span class="rvts16">”. O Status, representado por uma bola </span><span class="rvts97">vermelha</span><span class="rvts16">, passa para uma bola </span><span class="rvts96">verde</span><span class="rvts16">. Para iniciar todos os serviços ou aqueles que ainda não foram iniciados clique em “</span><span class="rvts17">Iniciar todos</span><span class="rvts16">”.</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;">
 <li class="rvps31"><span class="rvts0"><span class="rvts28">FINALIZANDO SERVIÇO:</span></span></li>
 </ul></ul></ul></ul>
-<p class="rvps9"><span class="rvts16">Para finalizar ou parar serviços somente um usuário com privilégio de administrador poderá fazer. No menu “</span><span class="rvts17">Administração</span><span class="rvts16">” clique “</span><span class="rvts17">Serviços</span><span class="rvts16">” para apresentar a lista de serviços disponíveis na área de trabalho. Na frente do nome do serviço clique em “</span><span class="rvts17">Parar</span><span class="rvts16">”. O Status, representado por uma bola </span><span class="rvts95">verde</span><span class="rvts16">, passa para uma bola </span><span class="rvts96">vermelha</span><span class="rvts16">. Para parar todos os serviços clique em “</span><span class="rvts17">Parar todos</span><span class="rvts16">”. Entretanto, esta opção só estará disponível quando todos os serviços estiverem inicializados.</span></p>
+<p class="rvps9"><span class="rvts16">Para finalizar ou parar serviços somente um usuário com privilégio de administrador poderá fazer. No menu “</span><span class="rvts17">Administração</span><span class="rvts16">” clique “</span><span class="rvts17">Serviços</span><span class="rvts16">” para apresentar a lista de serviços disponíveis na área de trabalho. Na frente do nome do serviço clique em “</span><span class="rvts17">Parar</span><span class="rvts16">”. O Status, representado por uma bola </span><span class="rvts96">verde</span><span class="rvts16">, passa para uma bola </span><span class="rvts97">vermelha</span><span class="rvts16">. Para parar todos os serviços clique em “</span><span class="rvts17">Parar todos</span><span class="rvts16">”. Entretanto, esta opção só estará disponível quando todos os serviços estiverem inicializados.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <p></p>
 
