--- a/helper/monitoring_module.html
+++ b/helper/monitoring_module.html
@@ -211,56 +211,56 @@
 <li class="rvps11"><span class="rvts16">Barra de ferramentas – </span><span class="rvts17">Tabela da camada</span><span class="rvts16"> : habilita na parte inferior da área de desenho a tabela de atributo da camada corrente. Na parte superior da tabela escolha a camada desejada.</span></li>
 </ul>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
-<h2 class="rvps115"><span class="rvts0"><span class="rvts45">Iniciando o Módulo de Monitoramento &nbsp;</span></span></h2>
+<h2 class="rvps116"><span class="rvts0"><span class="rvts45">Iniciando o Módulo de Monitoramento &nbsp;</span></span></h2>
 <p class="rvps9"><span class="rvts16">Para acesso ao módulo de monitoramento basta ter acesso a um navegador e digitar “</span><span class="rvts34">http://localhost:36001</span><span class="rvts16">” para acesso local. Para acesso remoto, consulte o administrador de sua rede para se informar do endereço a ser utilizado. O módulo apresenta todas as camadas definidas no menu de Visualizações ou Alertas no “Módulo de Administração” do projeto ativo.</span></p>
 <p class="rvps9"><span class="rvts16"><br/></span></p>
-<h2 class="rvps115"><span class="rvts0"><span class="rvts45">Manipulação de Camadas &nbsp;</span></span></h2>
+<h2 class="rvps116"><span class="rvts0"><span class="rvts45">Manipulação de Camadas &nbsp;</span></span></h2>
 <p class="rvps9"><span class="rvts16">No painel lateral estão disponíveis todas as camadas de cada item do projeto, as camadas de plano de fundo e outras camadas externas. As camadas do projeto estão divididas em 4 tipos, Dados estáticos, Dados Dinâmicos, Análises e Alertas. </span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <h3 class="rvps17"><span class="rvts0"><span class="rvts27">Apresentação de Camadas</span></span></h3>
 <h4 class="rvps18"><span class="rvts0"><span class="rvts28">Camadas do Projeto</span></span></h4>
 <p class="rvps9"><span class="rvts16">Para as camadas do projeto, clique sobre o tipo desejado e sobre a caixa branca a esquerda do nome da camada. A camada é apresentada na área de desenho. Clique novamente para desmarcar. A camada marcada ficará disponível na lista de “CAMADAS VISÍVEIS” (Figura 6.2). </span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
-<p class="rvps9"><img alt="" style="padding : 1px;" src="lib/Fig6_2.png"><span class="rvts16"> </span><img alt="" style="padding : 1px;" src="lib/Fig6_2a.png"></p>
+<p class="rvps9"><img alt="" style="padding : 1px;" src="lib/Fig6_2_web.png"><span class="rvts16"> </span><img alt="" style="padding : 1px;" src="lib/Fig6_2a_web.png"></p>
 <p class="rvps23"><span class="rvts18">Figura 6.2 – </span><span class="rvts19">Módulo de Monitoramento - Seleção de camadas - A camada selecionada fica disponível na lista de camadas visíveis.</span></p>
 <p class="rvps9"><span class="rvts16">Para ajustar a apresentação da camada ao tamanho da área de desenho (estender a área da camada a área de desenho) clique no botão de setas opostas ( ⤢ ) correspondente a camada deseja na lista de camadas visíveis. Caso mais de uma camada esteja visível, poderá optar por ajustar a união das áreas das camadas a área de desenho, para isso utilize o mesmo botão disponível a direita de “CAMADAS VISÍVEIS.</span></p>
 <p class="rvps28"><span class="rvts17">Dica: </span><span class="rvts16">Para desmarcar todas as camadas que estiverem visíveis de uma única vez, basta utilizar o botão ⛝ a direita de “CAMADAS VISÍVEIS.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <h4 class="rvps18"><span class="rvts0"><span class="rvts28">Camadas de Plano de Fundo</span></span></h4>
-<p class="rvps119"><span class="rvts16">Para as camadas de plano de fundo as opções de visualização são exclusivas, isto é, somente uma de cada vez é selecionada para visualização. Se desejado nenhuma camada de fundo basta clicar sobre a camada que estiver marcada.</span></p>
-<p class="rvps116"><span class="rvts16">As opções disponíveis nessa versão são as camadas do Open Street Map e a do General Bathymetric Chart of the Oceans (GEBCO). A camada marcada ficará disponível na lista de “CAMADAS VISÍVEIS” (Figura 6.3). </span></p>
+<p class="rvps120"><span class="rvts16">Para as camadas de plano de fundo as opções de visualização são exclusivas, isto é, somente uma de cada vez é selecionada para visualização. Se desejado nenhuma camada de fundo basta clicar sobre a camada que estiver marcada.</span></p>
+<p class="rvps117"><span class="rvts16">As opções disponíveis nessa versão são as camadas do Open Street Map e a do General Bathymetric Chart of the Oceans (GEBCO). A camada marcada ficará disponível na lista de “CAMADAS VISÍVEIS” (Figura 6.3). </span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
-<p class="rvps109"><img alt="" style="padding : 1px;" src="lib/Fig6_3a.png"><span class="rvts16"> </span><img alt="" style="padding : 1px;" src="lib/Fig6_3b.png"></p>
+<p class="rvps110"><img alt="" style="padding : 1px;" src="lib/Fig6_3a_web.png"><span class="rvts16"> </span><img alt="" style="padding : 1px;" src="lib/Fig6_3b_web.png"></p>
 <p class="rvps23"><span class="rvts18">Figura 6.3 – </span><span class="rvts19">Módulo de Monitoramento - Camadas de fundo OpenStreetMap e GEBCO.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <h4 class="rvps18"><span class="rvts0"><span class="rvts28">Camadas Externas</span></span></h4>
-<p class="rvps119"><span class="rvts16">As camadas externas são definidas pelo usuário pois podem ser incluídas através de servidores web públicos através do serviço WMS (Web Map Service). Clique no botão “ </span><span class="rvts36">+</span><span class="rvts17"> </span><span class="rvts16">” à direita de “Externos”. Uma janela será aberta para inserir o endereço URI do serviço WMS. A Figura 6.4 mostra a janela a ser utilizada. Copie e cole o endereço desejado e clique em “Adicionar”.</span></p>
-<p class="rvps27"><img alt="" style="padding : 1px;" src="lib/Fig6_4.png"></p>
+<p class="rvps120"><span class="rvts16">As camadas externas são definidas pelo usuário pois podem ser incluídas através de servidores web públicos através do serviço WMS (Web Map Service). Clique no botão “ </span><span class="rvts36">+</span><span class="rvts17"> </span><span class="rvts16">” à direita de “Externos”. Uma janela será aberta para inserir o endereço URI do serviço WMS. A Figura 6.4 mostra a janela a ser utilizada. Copie e cole o endereço desejado e clique em “Adicionar”.</span></p>
+<p class="rvps27"><img alt="" style="padding : 1px;" src="lib/Fig6_4_web.png"></p>
 <p class="rvps23"><span class="rvts18">Figura 6.4 – </span><span class="rvts19">Módulo de Monitoramento - Adição de camadas externas em WMS.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <p class="rvps28"><span class="rvts17">Dica: </span><span class="rvts16">A seleção das camadas que estiverem selecionadas &nbsp;em “CAMADAS VISÍVEIS, assim como a área de desenho selecionada podem ser salvas para posterior uso. Para salvar o estado da área de desenho é necessário que um usuário esteja conectado. Mais detalhes em “Configurações do Usuário”.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
-<h2 class="rvps115"><span class="rvts0"><span class="rvts45">Configurações do Usuário</span></span></h2>
-<p class="rvps119"><span class="rvts16">Para acesso ao “Módulo de Monitoramento” não é necessário “login” de usuário. Neste caso, somente as camadas que não foram definidas como privadas (Veja Capítulo 4 sobre visualização e alertas privados) devem estar disponíveis. Camadas que foram definidas como “Privado” necessitam de acesso através de “Usuário” e “Senha”. O botões abaixo indicam se há conexão por algum usuário ou não:</span></p>
+<h2 class="rvps116"><span class="rvts0"><span class="rvts45">Configurações do Usuário</span></span></h2>
+<p class="rvps120"><span class="rvts16">Para acesso ao “Módulo de Monitoramento” não é necessário “login” de usuário. Neste caso, somente as camadas que não foram definidas como privadas (Veja Capítulo 4 sobre visualização e alertas privados) devem estar disponíveis. Camadas que foram definidas como “Privado” necessitam de acesso através de “Usuário” e “Senha”. O botões abaixo indicam se há conexão por algum usuário ou não:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 0px; list-style-position: inside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 120px; list-style-position: outside; list-style-type: square;">
 <li class="rvps10"><img width="36" height="36" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user_off.png"><span class="rvts16"> : Sem acesso por usuário.</span></li>
 <li class="rvps11"><img width="37" height="37" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user.png"><span class="rvts16">: Usuário cadastrado conectado.</span></li>
 </ul></ul></ul>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
-<p class="rvps119"><span class="rvts16">Para efetuar </span><span class="rvts43">login </span><span class="rvts16">clique no botão </span><img width="30" height="30" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user_off.png"><span class="rvts16"> e digite o nome do “Usuário”, “Senha” e clique em “Entrar” (Figura 6.5).</span></p>
+<p class="rvps120"><span class="rvts16">Para efetuar </span><span class="rvts43">login </span><span class="rvts16">clique no botão </span><img width="30" height="30" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user_off.png"><span class="rvts16"> e digite o nome do “Usuário”, “Senha” e clique em “Entrar” (Figura 6.5).</span></p>
 <p class="rvps27"><span class="rvts16"><br/></span></p>
-<p class="rvps27"><img alt="" style="padding : 1px;" src="lib/Fig6_5.png"></p>
+<p class="rvps27"><img alt="" style="padding : 1px;" src="lib/Fig6_5_web.png"></p>
 <p class="rvps23"><span class="rvts18">Figura 6.5 – </span><span class="rvts19">Módulo de Monitoramento - Login de usuário cadastrado.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <p class="rvps28"><span class="rvts17">Obs: </span><span class="rvts16">Para cadastrar um usuário somente um com privilégio de administrador poderá fazer no “Módulo de Administração”. Veja como gerenciar usuários no Capítulo 2 - “Usuários”.</span></p>
-<p class="rvps117"><span class="rvts16">Para efetuar </span><span class="rvts43">logout </span><span class="rvts16">clique no botão </span><img width="31" height="31" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user.png"><span class="rvts16"> e “Sair” na janela apresentada (Figura 6.6).</span></p>
+<p class="rvps118"><span class="rvts16">Para efetuar </span><span class="rvts43">logout </span><span class="rvts16">clique no botão </span><img width="31" height="31" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user.png"><span class="rvts16"> e “Sair” na janela apresentada (Figura 6.6).</span></p>
 <p class="rvps27"><span class="rvts16"><br/></span></p>
-<p class="rvps27"><img alt="" style="padding : 1px;" src="lib/Fig6_6.png"></p>
+<p class="rvps27"><img alt="" style="padding : 1px;" src="lib/Fig6_6_web.png"></p>
 <p class="rvps23"><span class="rvts18">Figura 6.6 – </span><span class="rvts19">Módulo de Monitoramento - Logout e Estado do usuário conectado.</span></p>
 <p class="rvps2"><span class="rvts13"><br/></span></p>
 <h3 class="rvps17"><span class="rvts0"><span class="rvts27">Estado do Usuário</span></span></h3>
-<p class="rvps118"><span class="rvts16">O estado das camadas selecionadas e a posição selecionada na área de desenho pode ser salva quando há um usuário conectado. Nessa versão da plataforma somente o último estado pode ser salvo ou atualizado.</span></p>
-<p class="rvps118"><span class="rvts16">Para salvar ou carregar o último estado clique no botão </span><img width="31" height="31" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user.png"><span class="rvts16"> e escolha “Salvar Estado” ou “Carregar Estado” na janela apresentada (Figura 6.6).</span></p>
+<p class="rvps119"><span class="rvts16">O estado das camadas selecionadas e a posição selecionada na área de desenho pode ser salva quando há um usuário conectado. Nessa versão da plataforma somente o último estado pode ser salvo ou atualizado.</span></p>
+<p class="rvps119"><span class="rvts16">Para salvar ou carregar o último estado clique no botão </span><img width="31" height="31" alt="" style="padding : 1px;" src="lib/Fig6_BarraFerr_Login_user.png"><span class="rvts16"> e escolha “Salvar Estado” ou “Carregar Estado” na janela apresentada (Figura 6.6).</span></p>
 <p></p>
 
             </div>
