--- a/helper/administration.html
+++ b/helper/administration.html
@@ -171,7 +171,7 @@
                         <li><a href="administration_module.html">M&oacute;dulo de Administra&ccedil;&atilde;o</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="administration_module.html" title="M&oacute;dulo de Administra&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="status.html" title="Situa&ccedil;&atilde;o Atual" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Servicos.html" title="Servi&ccedil;os" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="administration_module.html" title="M&oacute;dulo de Administra&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="status.html" title="Situa&ccedil;&atilde;o Atual" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="services.html" title="Servi&ccedil;os" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -183,11 +183,11 @@
             <div class="main-content">
                 
 <p></p>
-<p class="rvps167"><img alt="" style="padding : 1px;" src="lib/Menu_adm.jpg"></p>
+<p class="rvps173"><img alt="" style="padding : 1px;" src="lib/Menu_adm.jpg"></p>
 <p class="rvps12"><span class="rvts23">A administração da plataforma é realizada por um usuário com perfil de administrador. Ao instalar a plataforma um usuário com este perfil é automaticamente definido. Outros usuários com perfil de administração podem ser definidos e somente estes podem ter acesso a item “Administração” para administrar as contas de usuário e serviços.</span></p>
 <p class="rvps12"><span class="rvts23">Os usuários podem gerenciar projetos e caso alguma visualização desses esteja protegida será necessário fazer login no “</span><span class="rvts24">Módulo de Monitoramento</span><span class="rvts23">” para que possam ser visualizadas.</span></p>
 <p class="rvps12"><span class="rvts23">Os serviços são definidos para serem utilizados por todos os projetos definidos por qualquer usuário.</span></p>
-<p class="rvps12"><span class="rvts23">Veja a seguir os recursos para administração de </span><a class="rvts44" href="Servicos.html">serviços</a><span class="rvts23"> e </span><a class="rvts44" href="users.html">usuários</a><span class="rvts23">.</span></p>
+<p class="rvps12"><span class="rvts23">Veja a seguir os recursos para administração de </span><a class="rvts44" href="services.html">serviços</a><span class="rvts23"> e </span><a class="rvts44" href="users.html">usuários</a><span class="rvts23">.</span></p>
 <p></p>
 
             </div>
