--- a/helper/computational_requirements.html
+++ b/helper/computational_requirements.html
@@ -168,10 +168,10 @@
             
                 <div class="navigation">
                     <ol class="breadcrumb">
-                        <li><a href="Introducao.html">Introdu&ccedil;&atilde;o</a></li>
+                        <li><a href="introduction.html">Introdu&ccedil;&atilde;o</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Introducao.html" title="Introdu&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="analysis_type.html" title="Tipos de An&aacute;lises" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="Iniciando.html" title="Iniciando" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="introduction.html" title="Introdu&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="analysis_type.html" title="Tipos de An&aacute;lises" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="starting.html" title="Iniciando" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
