--- a/helper/analysis_type.html
+++ b/helper/analysis_type.html
@@ -168,10 +168,10 @@
             
                 <div class="navigation">
                     <ol class="breadcrumb">
-                        <li><a href="Introducao.html">Introdu&ccedil;&atilde;o</a></li>
+                        <li><a href="introduction.html">Introdu&ccedil;&atilde;o</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Introducao.html" title="Introdu&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="data_formats.html" title="Dados e Formatos" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="computational_requirements.html" title="Requisitos computacionais" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="introduction.html" title="Introdu&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="data_formats.html" title="Dados e Formatos" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="computational_requirements.html" title="Requisitos computacionais" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -192,7 +192,7 @@
 </ul>
 <p class="rvps28"><img alt="" style="padding : 1px;" src="lib/Fig3_2_web.png"></p>
 <p class="rvps24"><span class="rvts20">Figura 3.2 – </span><span class="rvts21">Esquema de uma análise com base em objeto monitorado.</span></p>
-<p class="rvps25"><span class="rvts19">Nota: </span><span class="rvts22">Além dos recursos da linguagem Python uma lista de operadores zonais (item 3.3.3) podem ser utilizados sobre os dados dinâmicos nos modelos de análise do usuário. Atributos do dado estático também podem ser utilizados nos cálculos. Veja exemplo típico no item 3.3.1. Veja sobre Python no </span><a class="rvts34" href="PrincipaisSRID.html">anexo A2</a><span class="rvts22">, na documentação disponível em português em </span><a class="rvts34" href="https://wiki.python.org.br">https://wiki.python.org.br</a><span class="rvts22"> ou no site oficial em &nbsp;</span><a class="rvts39" href="https://www.python.org/">https://www.python.org/</a><span class="rvts40">.</span></p>
+<p class="rvps25"><span class="rvts19">Nota: </span><span class="rvts22">Além dos recursos da linguagem Python uma lista de operadores zonais (item 3.3.3) podem ser utilizados sobre os dados dinâmicos nos modelos de análise do usuário. Atributos do dado estático também podem ser utilizados nos cálculos. Veja exemplo típico no item 3.3.1. Veja sobre Python no </span><a class="rvts34" href="main_SRID.html">anexo A2</a><span class="rvts22">, na documentação disponível em português em </span><a class="rvts34" href="https://wiki.python.org.br">https://wiki.python.org.br</a><span class="rvts22"> ou no site oficial em &nbsp;</span><a class="rvts39" href="https://www.python.org/">https://www.python.org/</a><span class="rvts40">.</span></p>
 <p class="rvps22"><a class="rvts37" href="typical_examples_monitored_obj.html">Exemplo típico</a><span class="rvts36">, &nbsp;</span><a class="rvts37" href="operators_monitored_obj.html">Operadores sobre obj monitorado</a><span class="rvts36"> &nbsp;</span><img alt="" style="padding : 1px;" src="lib/working.jpg"></p>
 <hr style="height: 1px; color : #000000;  background-color : #000000; border-width : 0px;">
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: disc;">
@@ -203,7 +203,7 @@
 <p class="rvps26"><img alt="" style="padding : 1px;" src="lib/Fig3_3_web.png"></p>
 <p class="rvps26"><span class="rvts20">Figura 3.3 </span><span class="rvts21">– Esquema de uma análise com base em grades.</span></p>
 <p class="rvps25"><span class="rvts19">Nota:</span><span class="rvts18"> </span><span class="rvts22">Pelo menos um dos dados deve ser dinâmico de modo que a saída será criada na frequência desse dado ou a intervalos fixos definido pelo usuário. Ajustes deverão ser definidos para grades com diferentes resoluções espaciais e diferentes tamanhos</span><span class="rvts18">. Um conjunto de </span><a class="rvts30" href="operators_grid.html">operadores sobre grades de observação e previsão</a><span class="rvts18"> estão disponíveis.</span></p>
-<p class="rvps22"><a class="rvts37" href="ExemplodeanalisebaseadoemGrades.html">Exemplo típico</a><span class="rvts36">, &nbsp;</span><a class="rvts37" href="operators_grid.html">Operadores sobre Grades</a><span class="rvts36"> &nbsp;</span><img alt="" style="padding : 1px;" src="lib/working.jpg"></p>
+<p class="rvps22"><a class="rvts37" href="typical_examples_grid.html">Exemplo típico</a><span class="rvts36">, &nbsp;</span><a class="rvts37" href="operators_grid.html">Operadores sobre Grades</a><span class="rvts36"> &nbsp;</span><img alt="" style="padding : 1px;" src="lib/working.jpg"></p>
 <hr style="height: 1px; color : #000000;  background-color : #000000; border-width : 0px;">
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: disc;">
 <li class="rvps23"><a name="an_pcd"></a>
@@ -211,8 +211,8 @@
 </ul>
 <p class="rvps27"><img alt="" style="padding : 1px;" src="lib/Fig3_4_web.png"></p>
 <p class="rvps27"><span class="rvts20">Figura 3.4 </span><span class="rvts21">– Esquema de uma análise com base em PCD.</span></p>
-<p class="rvps25"><span class="rvts19">Nota</span><span class="rvts18">: Além dos cálculos realizados sobre os atributos da PCD (ver </span><a class="rvts30" href="OperadoressobrePCD.html">operadores de PCD</a><span class="rvts18">), </span><span class="rvts22">novos atributos podem ser incluídos como resultado do cruzamento com outros dados dinâmicos, sejam matriciais, PCDs ou ocorrências. Neste caso, as PCD´s podem ser consideradas como objetos monitorados para fazer uso dos operadores zonais disponíveis nesse tipo de análise.</span></p>
-<p class="rvps22"><a class="rvts37" href="typical_examples_dcp.html">Exemplo típico</a><span class="rvts36">,&nbsp;</span><a class="rvts37" href="OperadoressobrePCD.html"> Operadores sobre PCDs</a><span class="rvts36"> &nbsp;</span><img alt="" style="padding : 1px;" src="lib/working.jpg"></p>
+<p class="rvps25"><span class="rvts19">Nota</span><span class="rvts18">: Além dos cálculos realizados sobre os atributos da PCD (ver </span><a class="rvts30" href="operators_dcp.html">operadores de PCD</a><span class="rvts18">), </span><span class="rvts22">novos atributos podem ser incluídos como resultado do cruzamento com outros dados dinâmicos, sejam matriciais, PCDs ou ocorrências. Neste caso, as PCD´s podem ser consideradas como objetos monitorados para fazer uso dos operadores zonais disponíveis nesse tipo de análise.</span></p>
+<p class="rvps22"><a class="rvts37" href="typical_examples_dcp.html">Exemplo típico</a><span class="rvts36">,&nbsp;</span><a class="rvts37" href="operators_dcp.html"> Operadores sobre PCDs</a><span class="rvts36"> &nbsp;</span><img alt="" style="padding : 1px;" src="lib/working.jpg"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
