--- a/helper/status.html
+++ b/helper/status.html
@@ -168,10 +168,10 @@
             
                 <div class="navigation">
                     <ol class="breadcrumb">
-                        <li><a href="administration_module.html">M&oacute;dulo de Administra&ccedil;&atilde;o</a></li><li><a href="Projetos.html">Projetos</a></li>
+                        <li><a href="administration_module.html">M&oacute;dulo de Administra&ccedil;&atilde;o</a></li><li><a href="projects.html">Projetos</a></li>
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Projetos.html" title="Projetos" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="add_alerts.html" title="Adicionar Alerta" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="administration.html" title="Administra&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="projects.html" title="Projetos" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="add_alerts.html" title="Adicionar Alerta" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="administration.html" title="Administra&ccedil;&atilde;o" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -194,13 +194,13 @@
 <p class="rvps9"><span class="rvts18">Cada linha da janela “Situação Atual” apresenta um símbolo na primeira coluna que indica se algo está sendo processado (bola piscante) e se este processamento terminou com sucesso (bola verde) ou não (bola vermelha). A legenda das bolas são:</span></p>
 <p class="rvps2"><span class="rvts11"><br/></span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: disc;">
-<li class="rvps102"><span class="rvts18">(cinza piscante) &nbsp;: em execução pela primeira vez</span></li>
-<li class="rvps102"><span class="rvts18">(vermelho) &nbsp;: acusou erro na execução</span></li>
-<li class="rvps102"><span class="rvts18">(vermelho piscante) &nbsp;: em execução, com erro na rodada anterior</span></li>
-<li class="rvps102"><span class="rvts18">(verde) &nbsp;: acusou sucesso na execução</span></li>
-<li class="rvps102"><span class="rvts18">(verde piscante) &nbsp;: em execução, com sucesso na rodada anterior</span></li>
-<li class="rvps102"><span class="rvts18">(amarelo) &nbsp;: acusou alerta na execução</span></li>
-<li class="rvps102"><span class="rvts18">(amarelo piscante) &nbsp;: em execução, com alerta na rodada anterior</span></li>
+<li class="rvps108"><span class="rvts18">(cinza piscante) &nbsp;: em execução pela primeira vez</span></li>
+<li class="rvps108"><span class="rvts18">(vermelho) &nbsp;: acusou erro na execução</span></li>
+<li class="rvps108"><span class="rvts18">(vermelho piscante) &nbsp;: em execução, com erro na rodada anterior</span></li>
+<li class="rvps108"><span class="rvts18">(verde) &nbsp;: acusou sucesso na execução</span></li>
+<li class="rvps108"><span class="rvts18">(verde piscante) &nbsp;: em execução, com sucesso na rodada anterior</span></li>
+<li class="rvps108"><span class="rvts18">(amarelo) &nbsp;: acusou alerta na execução</span></li>
+<li class="rvps108"><span class="rvts18">(amarelo piscante) &nbsp;: em execução, com alerta na rodada anterior</span></li>
 <li class="rvps10"><span class="rvts18">(relógio) : execução na fila de espera</span></li>
 </ul>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
