--- a/helper/typical_examples.html
+++ b/helper/typical_examples.html
@@ -168,7 +168,7 @@
             
                 <div class="navigation">
                     <ol class="breadcrumb">
-                        <li><a href="administration_module.html">M&oacute;dulo de Administra&ccedil;&atilde;o</a></li><li><a href="Projetos.html">Projetos</a></li><li><a href="analysis.html">An&aacute;lises</a></li>
+                        <li><a href="administration_module.html">M&oacute;dulo de Administra&ccedil;&atilde;o</a></li><li><a href="projects.html">Projetos</a></li><li><a href="analysis.html">An&aacute;lises</a></li>
                     </ol>
                     <div class="nav-arrows">
                         <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="analysis.html" title="An&aacute;lises" role="button"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a><a class="btn btn-default" href="add_analysis_dcp.html" title="PCD" role="button"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span></a><a class="btn btn-default" href="typical_examples_monitored_obj.html" title="Exemplo de an&aacute;lise baseado em Objetos Monitorados" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
@@ -186,15 +186,15 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps9"><span class="rvts18">Para cada tipo de análise na plataforma um conjunto de dados é necessário. Os três exemplos a seguir apresentam os principais componentes de cada análise:</span></p>
 <ul style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: disc;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: circle;"><ul style="text-indent: 0px; padding: 0; margin: 0 0 0 48px; list-style-position: outside; list-style-type: square;">
-<li style="margin-left: 0px; text-indent: 0px" class="rvps91"><a class="rvts87" href="typical_examples_monitored_obj.html">Exemplo de análise baseado em Objetos Monitorados</a></li>
-<li style="margin-left: 0px; text-indent: 0px" class="rvps91"><a class="rvts87" href="ExemplodeanalisebaseadoemGrades.html">Exemplo de análise baseado em Grades</a></li>
-<li style="margin-left: 0px; text-indent: 0px" class="rvps91"><a class="rvts87" href="typical_examples_dcp.html">Exemplo de análise baseado em PCD</a></li>
+<li style="margin-left: 0px; text-indent: 0px" class="rvps97"><a class="rvts89" href="typical_examples_monitored_obj.html">Exemplo de análise baseado em Objetos Monitorados</a></li>
+<li style="margin-left: 0px; text-indent: 0px" class="rvps97"><a class="rvts89" href="typical_examples_grid.html">Exemplo de análise baseado em Grades</a></li>
+<li style="margin-left: 0px; text-indent: 0px" class="rvps97"><a class="rvts89" href="typical_examples_dcp.html">Exemplo de análise baseado em PCD</a></li>
 </ul></ul></ul>
 <p class="rvps9"><span class="rvts18"><br/></span></p>
-<p class="rvps92"><span class="rvts18">Veja ainda:</span></p>
-<p class="rvps86"><a class="rvts37" href="analysis_type.html#an_obj_monitor">Tipos de análise</a><span class="rvts36"> &nbsp;</span><img width="24" height="24" alt="" style="vertical-align: middle; padding : 1px;" src="lib/reading.jpg"></p>
-<p class="rvps87"><a class="rvts37" href="operators.html#lista_op_obj_monitor">Lista de Operadores sobre obj monitorado</a><span class="rvts36"> &nbsp;</span><img alt="" style="vertical-align: middle; padding : 1px;" src="lib/lista.jpg"></p>
-<p class="rvps88"><a class="rvts37" href="operators.html#lista_op_grades">Lista de Operadores sobre Grades</a><span class="rvts36"> &nbsp;</span><img alt="" style="vertical-align: middle; padding : 1px;" src="lib/lista.jpg"></p>
+<p class="rvps98"><span class="rvts18">Veja ainda:</span></p>
+<p class="rvps92"><a class="rvts37" href="analysis_type.html#an_obj_monitor">Tipos de análise</a><span class="rvts36"> &nbsp;</span><img width="24" height="24" alt="" style="vertical-align: middle; padding : 1px;" src="lib/reading.jpg"></p>
+<p class="rvps93"><a class="rvts37" href="operators.html#lista_op_obj_monitor">Lista de Operadores sobre obj monitorado</a><span class="rvts36"> &nbsp;</span><img alt="" style="vertical-align: middle; padding : 1px;" src="lib/lista.jpg"></p>
+<p class="rvps94"><a class="rvts37" href="operators.html#lista_op_grades">Lista de Operadores sobre Grades</a><span class="rvts36"> &nbsp;</span><img alt="" style="vertical-align: middle; padding : 1px;" src="lib/lista.jpg"></p>
 <p class="rvps22"><a class="rvts37" href="operators.html#lista_op_pcd">Lista de Operadores sobre PCD</a><span class="rvts36"> &nbsp;</span><img alt="" style="vertical-align: middle; padding : 1px;" src="lib/lista.jpg"></p>
 <p></p>
 
