--- a/webapp/public/javascripts/angular/wizard.html
+++ b/webapp/public/javascripts/angular/wizard.html
@@ -95,7 +95,12 @@
     <wz-step wz-title="{{ i18n.__('CSV Format') }}" canexit="validateSteps" wz-disabled="{{!custom_format}}" wz-data="wizard.csvFormat">
       <div class="col-md-12">
         <form name="forms.csvFormatForm">
-          <csv-format ng-if="csvFormatData.fields" csv-format-data="csvFormatData" semantics="semantics"></csv-format>
+          <csv-format ng-if="csvFormatData.fields"
+                      csv-format-data="csvFormatData"
+                      semantics="semantics"
+                      on-item-added="detectChanges(item)"
+                      on-item-removed="detectChanges(item)"
+                      on-item-changed="detectChanges(item)"></csv-format>
         </form>
       </div>
 
